# SaBRe

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.BSD-3  LICENSE.MIT  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
arch/riscv64/: CMakeLists.txt  clone_syscall.c  handle_syscall.s  handle_syscall_loader.s  handle_vdso.s  main.s  real_syscall.s  rewriter.c  riscv_decoder.c  riscv_decoder.h  riscv_utils.c  riscv_utils.h  syscall_stackframe.c
arch/x86_64/: CMakeLists.txt  clone3_syscall.s  clone_syscall.s  handle_rdtsc.s  handle_syscall.S  handle_syscall_loader.s  handle_vdso.s  main.s  real_syscall.s  rewriter.c  syscall_stackframe.c  tls_helper.c  x86_decoder.c  x86_decoder.h
cmake/: c_flags_override.cmake  mimalloc-sanitizer-compatibility.patch  mimalloc.cmake  sabre_add_component.cmake  sabre_add_plugin.cmake
debug-tools/: gdb-symbol-loader.py
includes/: bitops.h  compiler.h  config.h  futex.h  hash.h  hlist.h  jhash.h  kernel.h  linux_syscall_support.h  list.h  macros.h  rbtree.h  rbtree_augmented.h  real_syscall.h  sbr_api_defs.h  stringutil.h  vx_api_defs.h
includes/arch/: handle_rdtsc.h  handle_syscall.h  handle_syscall_loader.h  handle_vdso.h  rewriter.h  rewriter_api.h  rewriter_tools.h  syscall_stackframe.h  tls_helper.h
includes/loader/: custom_tls.h  debuginfo.h  dl_init_hook.h  elf_loading.h  global_vars.h  ld_sc_handler.h  maps.h  patchelf.h  premain.h  proxy_funcs.h  rewriter.h
includes/plugins/: real_syscall.h  sbr_api_defs.h
libsrc/: CMakeLists.txt  clone_syscall.s  real_syscall.s
libsrc/malloc/: _nx_malloc.h  malloc.c  mlock.c  mutex.h
loader/: CMakeLists.txt  custom_tls.c  debuginfo.c  dl_init_hook.s  elf_loading.c  elf_loading.h  global_vars.h  handle_rdtsc.h  handle_rdtsc.s  handle_syscall.S  handle_syscall.h  handle_syscall_loader.s  handle_vdso.s  ld_sc_handler.c  library.c  library.h  loader.c  macros.h  main.s  maps.c  maps.h  patchelf.cpp  premain.c  proxy_funcs.c  recursion_protector.c  rewriter.c  rewriter.h
loader/includes/: jhash.h  rbtree_augmented.h
loader/tools/: CMakeLists.txt  dump-vdso.c  process-vdso.c
patchelf/: CMakeLists.txt  elf.h  patchelf.cc  patchelf.h
plugin_api/: README.md  recursion_protector.c
plugin_api/arch/x86_64/: CMakeLists.txt  clone3_syscall.s  clone_syscall.s  real_syscall.s  vfork_return_from_child.s  vfork_syscall.s
plugins/identity/: CMakeLists.txt  identity.c
plugins/sbr-id/: CMakeLists.txt  identity.c
plugins/sbr-scfuzzer/: CMakeLists.txt  sc-fuzzer.c  sysent.h
plugins/sbr-trace/: CMakeLists.txt  sbr_api.h  strace.c  syscallent.h  sysent.h
plugins/sc-fuzzer/: CMakeLists.txt  sc-fuzzer.c  sysent.h
plugins/strace/: CMakeLists.txt  sbr_api.h  strace.c  syscallent.h  sysent.h
plugins/vstrace/: CMakeLists.txt  vstrace.c  vx_api.h
tests/: CMakeLists.txt  lit.cfg.in  test_sigill.S
tests/Simple/: test_execve.c  test_fail.c  test_fork.c  test_getpeername.c  test_hello.c  test_name.c  test_rc.c  test_read_write.c  test_sanitizers.c  test_sendmmsg.c  test_stat.c  test_sys.c  test_sysinfo.c  test_time.c  test_tsan.c
tests/Utils/: test_help.sh  test_rm.sh  test_shebang.sh  test_shebang2.sh
tests/Utils/help/: bash.sh  bunzip2.sh  bzip2.sh  cat.sh  chacl.sh  chgrp.sh  chmod  cp.sh  date.sh  dbus-uuidgen.sh  dd.sh  dmesg.sh  dumpkeys.sh  ed.sh  efibootmgr.sh  fgconsole.sh  fuser.sh  gcc.sh  grep.sh  gzip.sh  ip.sh  kill.sh  kmod.sh  lessecho.sh  ln.sh  loginctl.sh  ls.sh  lsmod.sh  mktemp.sh  mount.sh  nano.sh  nc.sh  ntfs-3g.sh  openvt.sh  ping.sh  ps.sh  sed.sh  setfacl.sh  tar.sh
tests/ld/: lit.cfg.in  test.c.in
tests/regression/: test_ancillary.c  test_dlopen.c  test_execve_sigchld.c  test_mktemp.c  test_pthread.c  test_return_value.c  test_select.c
tests/smoke/: hello.c  hello.c.in  lit.cfg.in
tests/syscalls/: test_chmod.c  test_chown.c  test_clone.c  test_fork.c  test_fork_simple.c  test_prlimit.c  test_utime.c  test_vfork.c  test_xattr.c
tests/vdso/: test_rip.c  test_vdso_calls.c
